--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prashant Kumar - AI/ML Portfolio</title>
     <meta name="description" content="Prashant Kumar - AI/ML Developer & Full Stack Engineer" />
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'%3E%3Crect width='128' height='128' rx='24' fill='%230ea5e9'/%3E%3Ctext x='50%' y='50%' dominant-baseline='central' text-anchor='middle' font-family='Arial' font-size='64' fill='white'%3EP%3C/text%3E%3C/svg%3E">
+    <link rel="icon" href="/favicon.svg">
+
     <link href="/src/index.css" rel="stylesheet">
   </head>
   <body>
